# optical_flow_tcc

./: .gitignore  README.en.md  README.md  folder_structure.txt  pyproject.toml  requirements.txt
gui/: main_window.py
sessions/session_2025-08-18_20-24-52/: data.csv  data_errado.csv  metadata.json
sessions/session_2025-08-18_22-16-51/: data.csv  metadata.json
sessions/session_2025-08-18_23-01-40/: data.csv  metadata.json
sessions/session_2025-08-18_23-06-11/: data.csv  metadata.json
sessions/session_2025-08-18_23-16-07/: data.csv  metadata.json
sessions/session_2025-08-18_23-24-48/: data.csv  metadata.json
sessions/session_2025-08-18_23-25-45/: data.csv  metadata.json
sessions/session_2025-08-18_23-28-23/: data.csv  metadata.json
sessions/session_2025-08-18_23-33-32/: data.csv  data_errado.csv  metadata.json
sessions/session_2025-08-19_20-38-01/: data.csv  metadata.json
sessions/session_2025-08-19_20-39-43/: data.csv  metadata.json
src/raft/: analysis.py  check_gpu.py  config.py  criar_csv_corrigido.py  main.py  main_live.py  main_offline.py  raft_camera.py  raft_camera_backup.py  session_manager.py  visualization.py
